# netraven

./: .coveragerc  .cursorignore  .dockerignore  .flake8  .gitattributes  .gitignore  DEVELOPER.md  Dockerfile  Dockerfile.api  Dockerfile.gateway  Dockerfile.tests  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Management with UI and API"  PLAN.md  README.md  README_NOTIFICATIONS.md  alembic.ini  config.test.yml  config.yml  current_implementation_plan.md  dev.sh  dev_runner.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  error_log.txt  migration_script.py  openapi.json  package-lock.json  package.json  phase0_report.md  phase1_report.md  phase5_implementation_plan.md  phase5_test_plan.md  playwright.config.js  progress_summary.md  pyproject.toml  (+11 more)
.github/: copilot-instructions.md
_archive/: next_steps.md  phase3.md  update_summary.md
alembic/: env.py
backend/: main.py
cli/: __init__.py  key_management.py
config/: README.md  default.yml  key_rotation.yaml  netraven.yaml  netraven.yaml.example  settings.yaml
docker/: Dockerfile.api  Dockerfile.gateway  Dockerfile.main  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  key-rotation.Dockerfile  requirements-scheduler.txt  requirements.txt  test-requirements.txt
docs/: DOCUMENTATION_STANDARDS.md  INSTALL.md  MAINTENANCE.md  MIGRATION_PLAN.md  README.md  api.md  api_standardization.md  backup_storage.md  credential_store.md  current_implementation_plan.md  device_communication.md  gateway.md  index.md  key_rotation.md  logging.md  next_steps.md  progress_summary.md  project-specs.md  rollback.md  schema_initialization.md  testing.md  troubleshooting.md  web-frontend-design.md
documents/: project-specs.md
examples/: device_test.py  scheduler_demo.py
frontend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
migrations/: add_notification_preferences.py
(+1033 files in other folders)
