[tool.poetry]
name = "netraven"
version = "0.1.0"
description = ""
authors = ["ccieblogger <ccieblogger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.40"}
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.5"
netmiko = "^4.3.0"
GitPython = "^3.1.43"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
