[tool.poetry]
name = "netraven"
version = "0.1.0"
description = ""
authors = ["ccieblogger <ccieblogger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.40"}
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
netmiko = "^4.3.0"
GitPython = "^3.1.43"
PyYAML = "^6.0.1"
structlog = "^25.2.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
redis = "^5.2.1"
rq = "^2.3.1"
rq-scheduler = "^0.14.0"
croniter = "^6.0.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
requests = "^2.32.3"
aioredis = "^2.0.1"
sse-starlette = "^2.3.3"
bcrypt = "3.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
